# darknet

./: .gitignore  CMakeLists.txt  README-windows.md  merge_upstream.sh
src/: CMakeLists.txt  activation_layer.cpp  art.cpp  avgpool_layer.cpp  batchnorm_layer.cpp  blas.cpp  box.cpp  captcha.cpp  cifar.cpp  classifier.cpp  coco.cpp  compare.cpp  connected_layer.cpp  convolutional_layer.cpp  cost_layer.cpp  crnn_layer.cpp  crop_layer.cpp  darknet.cpp  data.cpp  data.h  deconvolutional_layer.cpp  demo.cpp  detection_layer.cpp  detector.cpp  dropout_layer.cpp  go.cpp  gru_layer.cpp  image.cpp  image.h  local_layer.cpp  matrix.cpp  maxpool_layer.cpp  network.cpp  normalization_layer.cpp  parser.cpp  region_layer.cpp  regressor.cpp  reorg_layer.cpp  rnn.cpp  rnn_layer.cpp  (+12 more)
